Tue Feb 27 20:58:01 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* snprintf.c: Change names from gawk_xxx to real xxx.

Mon Jan 15 14:34:30 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* getaddrinfo.h, getaddrinfo.c: New files, based on
	submission by Jan Pazdziora <jpazdziora@redhat.com>.

Fri Sep 15 15:05:09 2006  Arnold D. Robbins  <arnold@skeeve.com>

	* strncasecmp.c, memmove.c: Corrected the FSF's address.

Fri Aug 25 13:21:57 2006  Arnold D. Robbins  <arnold@skeeve.com>

	* README: New file.
	* strncasecmp.c, memmove.c: Replaced with versions
	from GLIBC, hacked unmercifully to work standalone.

Fri Oct 21 11:18:10 2005  Arnold D. Robbins  <arnold@skeeve.com>

	* strtod.c (gawk_strtod): Made check for locale's decimal
	point conditional also upon do_posix.

Tue Jul 26 21:46:16 2005  Arnold D. Robbins  <arnold@skeeve.com>

	* Release 3.1.5: Release tar file made.

Tue Jul 26 21:27:46 2005   Arnold D. Robbins    <arnold@skeeve.com>

	* strtod.c (gawk_strtod) [ENABLE_NLS]: Removed from conditional
	paralleling change to main.c.
	* stroul.c (strtoul): Same.

Mon Aug  2 12:18:15 2004   Arnold D. Robbins    <arnold@skeeve.com>

	* Release 3.1.4: Release tar file made.

Mon May  3 09:24:21 2004  Arnold D. Robbins  <arnold@skeeve.com>

	* strtoul.c: New file.

Sun May  2 18:03:54 2004  Arnold D. Robbins  <arnold@skeeve.com>

	* strtod.c (gawk_strtod): Check for locale's decimal point
	instead of hard-wiring period.

Tue Jan 20 10:38:48 2004  Arnold D. Robbins  <arnold@skeeve.com>

	* memmove.c: New file.

Mon Jul  7 11:01:43 2003  Arnold D. Robbins  <arnold@skeeve.com>

	* Release 3.1.3: Release tar file made.

Wed Mar 19 14:10:31 2003  Arnold D. Robbins  <arnold@skeeve.com>

	This time for sure.
		-- Bullwinkle

	* Release 3.1.2: Release tar file made.

Mon Feb 3 20:37:09 2003  Pat Rankin  <rankin@pactechdata.com>

	* strftime.c: Restore use of TIME_T_IN_SYS_TYPES_H to control
	inclusion of <sys/types.h>.