@@ -1,3 +1,8 @@
+2007-03-19  Juan M. Guerrero  <juan.guerrero@gmx.de>
+
+	* config.h: Undef HAVE_ALLOCA for DJGPP.
+	* Makefile: Add floatcomp$O to AWKOBJS1 and PAWKOBJS1.
+
 2007-02-25  Juan M. Guerrero  <juan.guerrero@gmx.de>
 
 	* config.h: Let DEFPATH reflect DJGPP installation directory tree.
